<resources>
    <string name="app_name">HIITTimer</string>
    <string name="toolbar_login">Login</string>
    <string name="workout">Workout</string>
    <string name="assets">Assets</string>
    <string name="login">Login</string>
    <string name="current">Current</string>
    <string name="prepare">Prepare</string>
    <string name="work_out">Work out</string>
    <string name="interval">Interval</string>
    <string name="cool_down">Cool down</string>
    <string name="time">Time</string>
    <string name="cycle">Cycle</string>
    <string name="set">Set</string>
    <string name="total_time">Total time</string>
    <string name="play">Play</string>
    <string name="select_sound">select sound</string>
    <string name="delete">delete</string>
    <string name="comment">Comment</string>
    <string name="pick_a_count">Pick a count</string>
    <string name="placeholder_long_text">Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. It\'s also called placeholder (or filler) text. It\'s a convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg typography, font, or layout. Lorem ipsum is mostly a part of a Latin text by the classical author and philosopher Cicero. Its words and letters have been changed by addition or removal, so to deliberately render its content nonsensical; it\'s not genuine, correct, or comprehensible Latin anymore. While lorem ipsum\'s still resembles classical Latin, it actually has no meaning whatsoever. As Cicero\'s text doesn\'t contain the letters K, W, or Z, alien to latin, these, and others are often inserted randomly to mimic the typographic appearance of European languages, as are digraphs not to be found in the original. In a professional context it often happens that private or corporate clients corder a publication to be made and presented with the actual content still not being ready. Think of a news blog that\'s filled with content hourly on the day of going live. However, reviewers tend to be distracted by comprehensible content, say, a random text copied from a newspaper or the internet. The are likely to focus on the text, disregarding the layout and its elements. Besides, random text risks to be unintendedly humorous or offensive, an unacceptable risk in corporate environments. Lorem ipsum and its many variants have been employed since the early 1960ies, and quite likely since the sixteenth century.</string>
    <string name="title">Title</string>

    <string name="enter_the_title">Enter the title.</string>
    <string name="enter_the_comment_about_this_asset">Enter the comment about this asset.</string>
    <string name="colon">:</string>
    <string name="picker_message">Pick a time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sec">Sec</string>

    <string name="intro_text">Behold, a data dump from the Fitness API! Check the menu for more actions!</string>
    <string name="action_update_session">Update step count data</string>
    <string name="action_delete_session">Delete step count data</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>

    <string name="connection_succeeded">Connection succeeded</string>
    <string name="select">select</string>
    <string name="select_asset">Select Asset</string>
    <string name="create_new_asset">Create new Asset</string>
    <string name="save">save</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_local_data">No local data</string>
    <string name="empty">Empty Asset.</string>


</resources>
