<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asset"
            type="com.example.android.hiittimer.model.Asset" />

        <variable
            name="viewModel"
            type="com.example.android.hiittimer.ui.edit.EditViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.edit.EditFragment">

        <EditText
            android:id="@+id/add_asset_title"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_title"
            android:inputType="text"
            android:maxLines="1"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:text="@={viewModel.title}"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />


        <include
            android:id="@+id/include"
            layout="@layout/asset_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/add_asset_title"
            bind:included="@{asset}" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/comment"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <EditText
            android:id="@+id/add_asset_comment"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/enter_the_comment_about_this_asset"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLength="1000"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:text="@={viewModel.comment}"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/comment" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
